src/assets/main.css
@import './base.css';




@media (min-width: 1920px) {
  div.edit, div.preview {
    padding: 0 5% !important;
  }
}

@font-face {
  font-family: 'OsloSans';
  src: url("./fonts/OsloSans-Regular.woff");
}

body, textarea, input {
  font-family: OsloSans;
}
ul.comma-list {
  display: inline;
  list-style: none;
}

.comma-list li {
  display: inline;
  font-weight: bold;

}

.comma-list li::after {
  content: ", ";
}
.comma-list li:last-child::after {
  content: "";
}

table.matrix  {
  table-layout: fixed;
  width : 100%;
}
table.matrix td {
  border: 2px solid black;
  overflow: hidden;
  padding: 5px
}
td.yellow {
  background: var(--color-yellow);
}
td.green {
  background: var(--color-green)
}
td.red {
  background: var(--color-red)
}

nav {
  /* background color-blue-dark

   */


  background: var(--color-blue-dark);
  height: 30px;
  width: 100%;
  padding: 0 2rem;
  z-index: 1000;
  top: 0;
  position: fixed;

}
table {
  border-collapse: collapse;
  width: 100%;
}

table.data {
  border: solid 1px black;
  margin: 15px 0;

}

table.data td, table.data th {
  border: solid 2px black;
  padding: 5px;
}

input {
  width: 100%;
}



div.preview, div.edit {
  background-color: var(--color-blue-light);
  margin: 30px 0;

  width: 50%;
  float: left;
  padding: 1rem 2rem;
}

div.preview {
  background: var(--color-beige-light);
  #padding: 5px;
  #resize: both;
  #overflow: auto;
}
textarea, input {
  padding: 10px;
}
textarea.long-text {
  width: 100%;
  height: 300px;
  resize: none;
}

textarea.medium-text {
  width: 100%;
  height: 100px;
  resize: none;
}

select {
  height: 30px;
  margin-left: 10px;
  padding: 5px;
}

pre {
  white-space: pre-wrap;
}

